# Mizulune

./: .gitignore  AGENTS.md  LICENSE  README.md  build.gradle  convert.py  download_icons.py  gradle.properties  render_svg.py
.columbina/: CONTEXT.md  INIT.md
.columbina/phase/0001_project-init/: CONTEXT.md  debug.md  test.md
.columbina/phase/0002_git-publication-setup/: CONTEXT.md  debug.md  test.md
.columbina/phase/0003_skiko-2d-backend/: CONTEXT.md  debug.md  project_plan.md  test.md
.columbina/phase/0004_skiko-2d-effects-texture-interop/: CONTEXT.md  debug.md  project_plan.md  test.md
.columbina/phase/0005_skiko-font-stencil-migration/: CONTEXT.md  debug.md  project_plan.md  test.md
.columbina/phase/0006_dll-skiko-runtime-packaging/: CONTEXT.md  debug.md  test.md
.columbina/phase/0007_default-skiko-render-toggle/: CONTEXT.md  debug.md  test.md
Codexus.OpenSDK/: .gitignore  Codexus.OpenSDK.slnx
Codexus.OpenSDK/Codexus.ExampleConsole/: Program.cs
Codexus.OpenSDK/Codexus.ExampleMod/: manifest.json
Codexus.OpenSDK/Codexus.OpenSDK/: C4399.cs
Codexus.OpenSDK/Codexus.OpenSDK/Entities/C4399/: C4399VerificationChallenge.cs
Codexus.OpenSDK/Codexus.OpenSDK/Exceptions/: VerifyException.cs
Codexus.OpenSDK/Codexus.OpenTransport/: OpenTransport.cs
Codexus.OpenSDK/Codexus.OpenTransport/Entities/Transport/: CreateRequest.cs
Codexus.OpenSDK/Codexus.OpenTransport/Event/: EventPrepareTransport.cs  EventProtocolRejected.cs
Codexus.OpenSDK/Codexus.OpenTransport/Packet/Protocol/: MinecraftBase.cs
Codexus.OpenSDK/Codexus.Protocol/: Codexus.Protocol.csproj  ModLoader.cs  ProtocolSnapshotWriter.cs  ProxyProtocolSupport1206.cs  README.md  manifest.json
Codexus.OpenSDK/Codexus.Protocol.Tests/: Codexus.Protocol.Tests.csproj  ProtocolSnapshotWriterTests.cs
Codexus.OpenSDK/Codexus.Protocol/Properties/: AssemblyInfo.cs
Codexus.OpenSDK/Mizulune.SdkHost/: HostProtocol.cs  Mizulune.SdkHost.csproj  Program.cs  ProxyProfile.cs  SdkHostService.cs
Codexus.OpenSDK/Mizulune.SdkHost/profiles/: bjd-viaforge-1.20.6.json
buildSrc/: build.gradle
native/: vcpkg.json
native/dll/: CMakeLists.txt
native/dll/src/: diagnostics.cpp  jar_extract.cpp  main.cpp
native/loader/: CMakeLists.txt  loader.qrc
native/loader/res/: loader.rc
native/loader/src/: InjectionOverlay.h  MainWindow.cpp  MainWindow.h  ProfileStore.cpp  ProfileStore.h  SdkProcessBridge.cpp  SdkProcessBridge.h  SplashScreen.cpp  TitleBar.cpp  UpdateClient.cpp  UpdateClient.h  injector.cpp  main.cpp
native/loader/webui/: app.js  index.html  styles.css
src/main/java/shit/zen/: ClientBase.java  ZenClient.java
src/main/java/shit/zen/asm/: Bootstrap.java
src/main/java/shit/zen/config/: ValuesConfig.java
src/main/java/shit/zen/dll/: GameLoaderBridge.java
src/main/java/shit/zen/event/: EventBus.java
src/main/java/shit/zen/gui/: IntroAnimation.java  NewClickGui.java  (+1 more)
src/main/resources/webui/: index.html
(+243 files in other folders)
